# skin_segmentation

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  package.xml  setup.py
config/: rgb_calibration.yml  thermal.rviz  thermal_calibration.yml
frontend/: README.md  bower.json  index.html  manifest.json
frontend/src/hands-app/: hands-app.html
frontend/test/hands-app/: hands-app_test.html
include/skin_segmentation/: box_interactive_marker.h  calibration.h  constants.h  cuda_utils.h  hand_box_coords.h  labeling.h  load_camera_info.h  load_configs.h  nerf.h  opencv_utils.h  pcl_typedefs.h  projection.h  rgbdt_data.h  skeleton_evaluator.h  skeleton_labeler.h  snapshot.h  thresholding.h
launch/: cameras.launch  extract.launch  extrinsic_calibration.launch  labeling.launch  params.launch  record_calibration_data.launch  record_data.launch  registration.launch  service_test.launch  tf_frames.launch
msg/: Images.msg
scripts/: cameracalibrator.py  cv_to_string.py  generate_augmentations.bash  ici_main  label_data.bash  label_skeleton.bash  organize_data.bash  plot_nerf_eval.py  run_demo.bash
src/: base_rate_main.cpp  box_interactive_marker.cpp  box_interactive_marker_demo.cpp  calibration.cpp  calibration_capture.cpp  calibration_main.cpp  depth_to_gradient_main.cpp  evaluate_skeleton_main.cpp  generate_augmentations_main.cpp  group_images_by_time_main.cpp  label_data_main.cpp  label_skeleton_main.cpp  labeling.cpp  labeling.cu  load_camera_info.cpp  load_configs.cpp  nerf.cpp  normalization_node.cpp  opencv_utils.cpp  pixel_means_main.cpp  projection.cpp  projection.cu  projection_demo_main.cpp  registration.cpp  skeleton_evaluator.cpp  skeleton_labeler.cpp  snapshot.cpp  snapshot_main.cpp  thermal.cpp  thresholding.cpp
src/skin_segmentation/: __init__.py  hand_segmentation.py  hand_segmentation_demo.py  hand_segmentation_node.py  hand_segmentation_node_demo.py  segment_data_to_video.py
src/skin_segmentation/networks/: __init__.py  network.py  vgg16_convs.py
src/skin_segmentation/utils/: blob.py
